sumo/tests/sumo/output/meandata_edgebased/errors/missing_begin1/errors.sumo
Error: The number of entries in 'begin' differs from the number in 'end' for meandata-lane 'dump_15'.
Error: The number of entries in 'begin' differs from the number in 'end' for meandata-lane 'dump_60'.
Quitting (on error).
